# llm-judge-stress-test

./: .gitignore  LICENSE  README.md  paper.tex
hai-research/: .env.example  .gitignore  README.md  human_validation_instructions.md  pyproject.toml
hai-research/configs/: exp_claude.yaml  exp_cli_validation_claude_codex.yaml  exp_comprehensive_claude.yaml  exp_comprehensive_gemini.yaml  exp_comprehensive_groq.yaml  exp_comprehensive_llama.yaml  exp_comprehensive_openai.yaml  exp_core_antigravity_gemini_flash.yaml  exp_core_claude_haiku.yaml  exp_core_gpt54.yaml  exp_core_groq_llama31_8b.yaml  exp_core_groq_qwen3_32b.yaml  exp_llama_local.yaml  exp_mix_all.yaml  exp_neutral_claude_haiku.yaml  exp_neutral_gemini_flash.yaml  exp_neutral_gpt54.yaml  exp_neutral_groq_llama31_8b.yaml  exp_neutral_groq_qwen3_32b.yaml  exp_openai.yaml  exp_pilot_antigravity_gemini_flash.yaml  exp_pilot_claude_cli.yaml  exp_pilot_codex_cli.yaml  exp_pilot_gemini_cli.yaml  exp_pilot_groq.yaml  exp_pilot_groq_provider_models.yaml  exp_semeval_authority.yaml  exp_semeval_baseline.yaml  exp_semeval_baseline_mock.yaml  exp_semeval_compound.yaml  exp_semeval_cultural.yaml  exp_toy_mock.yaml  exp_validation_antigravity_gemini_flash.yaml
hai-research/paper_artifacts/: model_inventory.md
hai-research/prompts/: judge_v1.txt
hai-research/scripts/: check_run_quality.py  human_perturbation_validation.py  paper_robustness_analysis.py  progress.py  repair_judgments.py  reparse_judgments.py  resume_run.py  run_neutral_baseline.sh  run_remaining_experiments.sh  summarize_neutral_baseline.py
hai-research/src/: __init__.py  cli.py  config.py  registry.py  (+1 more)
(+75 files in other folders)
