[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-judge-stress"
version = "0.1.0"
description = "Research codebase for LLM judgment stress testing with systematic perturbations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Maksym Yemelianenko"},
    {name = "Wesley Zhuang"},
    {name = "Dorien Zhang"}
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]
groq = ["openai>=1.0.0"]
gemini = ["google-genai>=1.0.0"]
providers = ["openai>=1.0.0", "anthropic>=0.18.0", "google-genai>=1.0.0"]
hf = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",  # Required for Llama tokenizers
]
all = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",  # Required for Llama tokenizers
]

[project.scripts]
llm-judge = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

